--- a/latex2wp.cabal
+++ b/latex2wp.cabal
@@ -15,7 +15,7 @@ executable latex2wp-exe
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base >= 4.7 && < 5
-                     , pandoc
+                     , pandoc >= 1.14
                      , text
                      , filepath
                      , process
